# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

workspace(name = "devtools")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

SKYLIB_VERSION = "1.3.0"

http_archive(
    name = "bazel_skylib",
    sha256 = "74d544d96f4a5bb630d465ca8bbcfe231e3594e5aae57e1edbf17a6eb3ca2506",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/{version}/bazel-skylib-{version}.tar.gz".format(version = SKYLIB_VERSION),
        "https://github.com/bazelbuild/bazel-skylib/releases/download/{version}/bazel-skylib-{version}.tar.gz".format(version = SKYLIB_VERSION),
    ],
)

http_archive(
    name = "com_google_absl",
    sha256 = "4f356a07b9ec06ef51f943928508566e992f621ed5fa4dd588865d7bed1284cd",
    strip_prefix = "abseil-cpp-78be63686ba732b25052be15f8d6dee891c05749",
    urls = ["https://github.com/abseil/abseil-cpp/archive/78be63686ba732b25052be15f8d6dee891c05749.zip"],
)

http_archive(
    name = "com_google_googletest",
    sha256 = "ffa17fbc5953900994e2deec164bb8949879ea09b411e07f215bfbb1f87f4632",
    strip_prefix = "googletest-1.13.0",
    urls = ["https://github.com/google/googletest/archive/refs/tags/v1.13.0.zip"],
)

http_archive(
    name = "re2",
    sha256 = "620dc531d0bda6f51d141511beb2b1fdf44a4c80315533cefc75781ab807a081",
    strip_prefix = "re2-2023-02-01",
    urls = ["https://github.com/google/re2/archive/refs/tags/2023-02-01.zip"],
)

http_archive(
    name = "rules_foreign_cc",
    sha256 = "2a4d07cd64b0719b39a7c12218a3e507672b82a97b98c6a89d38565894cf7c51",
    strip_prefix = "rules_foreign_cc-0.9.0",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/refs/tags/0.9.0.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

LLVM_COMMIT = "1911381d023a6bef5407fe03c9aa455c0cba08c4"

LLVM_SHA256 = "6626976159e827677046d628617e2c8e5e780870b73b5fe46e30bd86e29fe9f1"

http_archive(
    name = "llvm-raw",
    build_file_content = "# empty",
    sha256 = LLVM_SHA256,
    strip_prefix = "llvm-project-" + LLVM_COMMIT,
    urls = ["https://github.com/llvm/llvm-project/archive/{commit}.tar.gz".format(commit = LLVM_COMMIT)],
)

load("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure", "llvm_disable_optional_support_deps")

llvm_configure(name = "llvm-project")

llvm_disable_optional_support_deps()

HEDRON_COMPILE_COMMANDS_REF = "0197fc673a1a6035078ac7790318659d7442e27e"

http_archive(
    name = "hedron_compile_commands",
    sha256 = "632cf245a06f38a02eefe9764ae5ca581b74bfa106a44067665fcd99fb6babb0",
    strip_prefix = "bazel-compile-commands-extractor-{}".format(HEDRON_COMPILE_COMMANDS_REF),
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/{}.tar.gz".format(HEDRON_COMPILE_COMMANDS_REF),
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()
