[package]
name = "cras_common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bitflags = "2.4.0"
getrandom = "0.2.7"
itertools = "0.11.0"
libc = "0.2.44"
log = "0.4.17"
nix = { version = "0.28.0", features = ["process"] }
once_cell = "1.17.0"
openssl = "0.10.66"
serde_json = "1.0.64"
static_assertions = "1.1.0"
syslog = "6.0.1"
