# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

cc_library(
    name = "include",
    hdrs = glob(["*.h"]),
    includes = ["."],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "public_headers",
    srcs = glob(["*.h"]),
    visibility = ["//dist:__pkg__"],
)
