# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//:utils.bzl", "bool_flag_config", "define_feature")
load(":defs.bzl", "COPTS")

# Tells whether the cros-debug use flag is set.
bool_flag_config(
    name = "cros_debug",
    build_setting_default = True,
)

cc_test(
    name = "cros_debug_test",
    srcs = ["cros_debug_test.cc"],
    copts = COPTS,
    defines = define_feature(":cros_debug_build", "HAVE_CROS_DEBUG"),
    deps = [
        "@pkg_config//gtest",
        "@pkg_config//gtest_main",
    ],
)
