# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    # Allow legacy packages to see //cras/server.
    default_visibility = [
        "//cras/platform:__subpackages__",  # Allow platform dependencies to send notifications.
        "//cras/src/server:__pkg__",
        "//cras/src/tests:__pkg__",
    ],
)

cc_library(
    name = "main_message",
    srcs = ["main_message.c"],
    hdrs = ["main_message.h"],
    deps = [
        "//cras/include",
        "//cras/src/common:cras_util",
        "//third_party/utlist",
    ],
)
